<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout01"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TextView android:id="@+id/TextView01" android:layout_height="wrap_content"
		android:text="@string/app_name" android:textSize="12pt"
		android:layout_width="fill_parent" android:gravity="center"
		android:layout_marginBottom="2pt" />
	<ListView android:id="@+id/ListView01" android:layout_width="fill_parent"
		android:layout_below="@id/TextView01" android:layout_height="wrap_content"
		android:layout_marginBottom="5px" android:layout_marginTop="5px"
		android:layout_centerVertical="true" android:layout_centerInParent="true"
		android:layout_centerHorizontal="true" />
	<Button android:id="@+id/Button01" android:layout_below="@id/ListView01"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:text="@string/exit_button_text"
		android:layout_centerHorizontal="true" android:maxHeight="10px"
		android:maxWidth="50px" android:minHeight="10px" android:minWidth="50px" />
	<TextView android:id="@+id/TextView02" android:layout_below="@id/Button01"
		android:layout_height="wrap_content" android:gravity="center|bottom"
		android:layout_width="wrap_content" android:textSize="4pt"
		android:text="@string/author_info" android:layout_alignBaseline="@id/RelativeLayout01"
		android:layout_centerHorizontal="true" android:layout_margin="4px" />
</RelativeLayout>